LRA/src/gen/HTMLParser.java
// Generated from C:/Users/AZZAM/Desktop/My_Compiler/src\HTMLParser.g4 by ANTLR 4.10.1
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HTMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PHP_PAGE=1, HTML_PAGE=2, WHITESPACQ=3, WHITESPAC=4, BODY_KEY=5, EXTENDS=6, 
		COMMA_EXTENDS=7, OPEN_CURLY_BRACKET=8, CLOSE_CURLY_BRACKET=9, PAGE_NAME=10, 
		WHITESPAC2=11, OUT_KEY=12, IN_KEY=13, LINK_KEY=14, FORM_KEY=15, END_BODY_KEY=16, 
		WHITESPAC_FORM=17, OUT_KEY_FORM=18, IN_KEY_FORM=19, LINK_KEY_FORM=20, 
		END_FORM_KEY=21, WHITESPAC5=22, DOUBLE_DOT=23, BIGTEXT=24, IMG=25, TEXT=26, 
		LIST=27, WHITESPAC1=28, OPEN_BRACKET=29, CLOSE_BRACKET=30, ATTRIBUTE_SCALE=31, 
		ATTRIBUTE_TITLE=32, COMMA=33, DOUBLE_DOT1=34, WHITESPAC3=35, NUMBER_SCALE=36, 
		WHITESPAC4=37, DOUBLE_DOT2=38, DOUBLE_MUSTACHE_OPEN=39, ATEXT=40, DOUBLE_QUT=41, 
		WHITESPAC_MUSTACHE=42, MUSTACHE_TEXT=43, COMMA_MUSTACHE=44, DOUBLE_MUSTACHE_CLOSE=45, 
		WHITESPAC6=46, OPEN_BRACKET1=47, CLOSE_BRACKE1=48, ATTRIBUTE_PATH=49, 
		ATTRIBUTE_ALT_TEXT=50, COMMA1=51, WHITESPAC7=52, OPEN_BRACKET2=53, CLOSE_BRACKE2=54, 
		ATTRIBUTE_TYPE=55, ATTRIBUTE_TITLE1=56, COMMA2=57, WHITESPAC8=58, DOUBLE_DOT3=59, 
		TYPE_TEXT=60, WHITESPAC20=61, DOUBLE_DOT20=62, IN_FIELD=63, IN_SELECT=64, 
		WHITESPAC21=65, OPEN_BRACKET21=66, CLOSE_BRACKET21=67, ATTRIBUTE_TITLE21=68, 
		ATTRIBUTE_TYPE21=69, ATTRIBUTE_NAME21=70, ATTRIBUTE_HINT21=71, ATTRIBUTE_REQUIRED21=72, 
		COMMA21=73, WHITESPAC22=74, DOUBLE_DOT22=75, TYPE_FIELD=76, WHITESPAC23=77, 
		OPEN_BRACKET23=78, CLOSE_BRACKET23=79, ATTRIBUTE_OPTION23=80, ATTRIBUTE_NAME23=81, 
		COMMA23=82, WHITESPAC24=83, OPEN_BRACKET24=84, CLOSE_BRACKET24=85, ATTRIBUTE_TITLE24=86, 
		ATTRIBUTE_VALUE24=87, COMMA24=88, WHITESPAC9=89, DOUBLE_DOT4=90, LINK_BUTTON=91, 
		LINK_SIMPLE=92, WHITESPAC10=93, OPEN_BRACKET3=94, CLOSE_BRACKET3=95, ATTRIBUTE_HREF=96, 
		ATTRIBUTE_TEXT=97, COMMA3=98, WHITESPAC11=99, OPEN_BRACKET4=100, CLOSE_BRACKET4=101, 
		ATTRIBUTE_HREF1=102, ATTRIBUTE_TEXT2=103, COMMA4=104, WHITESPAC12=105, 
		OPEN_BRACKET5=106, CLOSE_BRACKET5=107, ATTRIBUTE_OPTION=108, ATTRIBUTE_NUMBERED=109, 
		COMMA5=110, WHITESPAC13=111, OPEN_BRACKET6=112, CLOSE_BRACKET6=113, WHITESPAC14=114, 
		DOUBLE_DOT5=115, NUMBERED_VALUE=116, WHITE_SPAC=117, OPEN_CURLY_BRACKET_CONTROL=118, 
		CONTROL=119, CONTOLLER_PAGE_NAME=120, WHITE_SPAC1=121, SERVER_NAME=122, 
		USER_NAME=123, PASSWORD=124, DB_NAME=125, INSERT_TO=126, SELECT_OF=127, 
		VALID_IN=128, GO=129, IF=130, OPEN_BRACKET_IF=131, CLOSE_BRACKET_IF=132, 
		OPEN_CURLY_BRACKET_IF=133, COLSE_CURLY_BRACKET_CONTROL=134, WHITE_SPAC7=135, 
		INSERT_TO_INIF=136, SELECT_OF_INIF=137, VALID_IN_INIF=138, GO_INIF=139, 
		COLSE_CURLY_BRACKET_IF=140, WHITE_SPAC6=141, OPEN_BRACKET_GO=142, ROLE=143, 
		DOUBLE_DOT_GO=144, GO_VLAUE=145, CLOSE_BRACKET_GO=146, WHITE_SPAC5=147, 
		OPEN_BRACKET_INV=148, COMMA_INV=149, INV_VLAUE=150, CLOSE_BRACKET_INV=151, 
		WHITE_SPAC4=152, TABLE_VLAUE=153;
	public static final int
		RULE_programs = 0, RULE_phpPages = 1, RULE_contoller_pages = 2, RULE_controller_element = 3, 
		RULE_if_php = 4, RULE_inv = 5, RULE_go = 6, RULE_table = 7, RULE_htmlPages = 8, 
		RULE_pages = 9, RULE_body = 10, RULE_element = 11, RULE_form = 12, RULE_out = 13, 
		RULE_mustache = 14, RULE_bigText = 15, RULE_attribute_bigText = 16, RULE_img = 17, 
		RULE_attribute_img = 18, RULE_text = 19, RULE_attribute_text = 20, RULE_list = 21, 
		RULE_attribute_list = 22, RULE_link = 23, RULE_buttonLink = 24, RULE_attribute_buttonLink = 25, 
		RULE_simpleLink = 26, RULE_attribute_simpleLink = 27, RULE_in = 28, RULE_field = 29, 
		RULE_select = 30, RULE_attribute_field = 31, RULE_attribute_select = 32;
	private static String[] makeRuleNames() {
		return new String[] {
			"programs", "phpPages", "contoller_pages", "controller_element", "if_php", 
			"inv", "go", "table", "htmlPages", "pages", "body", "element", "form", 
			"out", "mustache", "bigText", "attribute_bigText", "img", "attribute_img", 
			"text", "attribute_text", "list", "attribute_list", "link", "buttonLink", 
			"attribute_buttonLink", "simpleLink", "attribute_simpleLink", "in", "field", 
			"select", "attribute_field", "attribute_select"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'CONTROLLER'", "'PAGE'", null, null, "'start body'", "'extends'", 
			null, null, null, null, null, null, null, null, "'start form'", "'end body'", 
			null, null, null, null, "'end form'", null, null, "'BigText'", "'Img'", 
			"'Text'", "'List'", null, null, null, "'scale'", null, null, null, null, 
			null, null, null, "'{{'", null, "'\"'", null, null, null, "'}}'", null, 
			null, null, "'path'", "'alt_text'", null, null, null, null, null, null, 
			null, null, null, null, null, null, "'field'", null, null, null, null, 
			null, null, null, "'hint'", "'required'", null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, "'value'", null, 
			null, null, "'buttonLink'", "'simpleLink'", null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, "'numbered'", 
			null, null, null, null, null, null, null, null, null, "'control'", null, 
			null, "'server'", "'user'", "'password'", "'db_name'", null, null, null, 
			null, "'if'", null, null, null, null, null, null, null, null, null, null, 
			null, null, "'role'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "PHP_PAGE", "HTML_PAGE", "WHITESPACQ", "WHITESPAC", "BODY_KEY", 
			"EXTENDS", "COMMA_EXTENDS", "OPEN_CURLY_BRACKET", "CLOSE_CURLY_BRACKET", 
			"PAGE_NAME", "WHITESPAC2", "OUT_KEY", "IN_KEY", "LINK_KEY", "FORM_KEY", 
			"END_BODY_KEY", "WHITESPAC_FORM", "OUT_KEY_FORM", "IN_KEY_FORM", "LINK_KEY_FORM", 
			"END_FORM_KEY", "WHITESPAC5", "DOUBLE_DOT", "BIGTEXT", "IMG", "TEXT", 
			"LIST", "WHITESPAC1", "OPEN_BRACKET", "CLOSE_BRACKET", "ATTRIBUTE_SCALE", 
			"ATTRIBUTE_TITLE", "COMMA", "DOUBLE_DOT1", "WHITESPAC3", "NUMBER_SCALE", 
			"WHITESPAC4", "DOUBLE_DOT2", "DOUBLE_MUSTACHE_OPEN", "ATEXT", "DOUBLE_QUT", 
			"WHITESPAC_MUSTACHE", "MUSTACHE_TEXT", "COMMA_MUSTACHE", "DOUBLE_MUSTACHE_CLOSE", 
			"WHITESPAC6", "OPEN_BRACKET1", "CLOSE_BRACKE1", "ATTRIBUTE_PATH", "ATTRIBUTE_ALT_TEXT", 
			"COMMA1", "WHITESPAC7", "OPEN_BRACKET2", "CLOSE_BRACKE2", "ATTRIBUTE_TYPE", 
			"ATTRIBUTE_TITLE1", "COMMA2", "WHITESPAC8", "DOUBLE_DOT3", "TYPE_TEXT", 
			"WHITESPAC20", "DOUBLE_DOT20", "IN_FIELD", "IN_SELECT", "WHITESPAC21", 
			"OPEN_BRACKET21", "CLOSE_BRACKET21", "ATTRIBUTE_TITLE21", "ATTRIBUTE_TYPE21", 
			"ATTRIBUTE_NAME21", "ATTRIBUTE_HINT21", "ATTRIBUTE_REQUIRED21", "COMMA21", 
			"WHITESPAC22", "DOUBLE_DOT22", "TYPE_FIELD", "WHITESPAC23", "OPEN_BRACKET23", 
			"CLOSE_BRACKET23", "ATTRIBUTE_OPTION23", "ATTRIBUTE_NAME23", "COMMA23", 
			"WHITESPAC24", "OPEN_BRACKET24", "CLOSE_BRACKET24", "ATTRIBUTE_TITLE24", 
			"ATTRIBUTE_VALUE24", "COMMA24", "WHITESPAC9", "DOUBLE_DOT4", "LINK_BUTTON", 
			"LINK_SIMPLE", "WHITESPAC10", "OPEN_BRACKET3", "CLOSE_BRACKET3", "ATTRIBUTE_HREF", 
			"ATTRIBUTE_TEXT", "COMMA3", "WHITESPAC11", "OPEN_BRACKET4", "CLOSE_BRACKET4", 
			"ATTRIBUTE_HREF1", "ATTRIBUTE_TEXT2", "COMMA4", "WHITESPAC12", "OPEN_BRACKET5", 
			"CLOSE_BRACKET5", "ATTRIBUTE_OPTION", "ATTRIBUTE_NUMBERED", "COMMA5", 
			"WHITESPAC13", "OPEN_BRACKET6", "CLOSE_BRACKET6", "WHITESPAC14", "DOUBLE_DOT5", 
			"NUMBERED_VALUE", "WHITE_SPAC", "OPEN_CURLY_BRACKET_CONTROL", "CONTROL", 
			"CONTOLLER_PAGE_NAME", "WHITE_SPAC1", "SERVER_NAME", "USER_NAME", "PASSWORD", 
			"DB_NAME", "INSERT_TO", "SELECT_OF", "VALID_IN", "GO", "IF", "OPEN_BRACKET_IF", 
			"CLOSE_BRACKET_IF", "OPEN_CURLY_BRACKET_IF", "COLSE_CURLY_BRACKET_CONTROL", 
			"WHITE_SPAC7", "INSERT_TO_INIF", "SELECT_OF_INIF", "VALID_IN_INIF", "GO_INIF", 
			"COLSE_CURLY_BRACKET_IF", "WHITE_SPAC6", "OPEN_BRACKET_GO", "ROLE", "DOUBLE_DOT_GO", 
			"GO_VLAUE", "CLOSE_BRACKET_GO", "WHITE_SPAC5", "OPEN_BRACKET_INV", "COMMA_INV", 
			"INV_VLAUE", "CLOSE_BRACKET_INV", "WHITE_SPAC4", "TABLE_VLAUE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HTMLParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HTMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramsContext extends ParserRuleContext {
		public List<HtmlPagesContext> htmlPages() {
			return getRuleContexts(HtmlPagesContext.class);
		}
		public HtmlPagesContext htmlPages(int i) {
			return getRuleContext(HtmlPagesContext.class,i);
		}
		public List<PhpPagesContext> phpPages() {
			return getRuleContexts(PhpPagesContext.class);
		}
		public PhpPagesContext phpPages(int i) {
			return getRuleContext(PhpPagesContext.class,i);
		}
		public ProgramsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterPrograms(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitPrograms(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitPrograms(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramsContext programs() throws RecognitionException {
		ProgramsContext _localctx = new ProgramsContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PHP_PAGE || _la==HTML_PAGE) {
				{
				setState(68);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case HTML_PAGE:
					{
					setState(66);
					htmlPages();
					}
					break;
				case PHP_PAGE:
					{
					setState(67);
					phpPages();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(72);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PhpPagesContext extends ParserRuleContext {
		public TerminalNode PHP_PAGE() { return getToken(HTMLParser.PHP_PAGE, 0); }
		public List<TerminalNode> CONTOLLER_PAGE_NAME() { return getTokens(HTMLParser.CONTOLLER_PAGE_NAME); }
		public TerminalNode CONTOLLER_PAGE_NAME(int i) {
			return getToken(HTMLParser.CONTOLLER_PAGE_NAME, i);
		}
		public TerminalNode CONTROL() { return getToken(HTMLParser.CONTROL, 0); }
		public TerminalNode OPEN_CURLY_BRACKET_CONTROL() { return getToken(HTMLParser.OPEN_CURLY_BRACKET_CONTROL, 0); }
		public Contoller_pagesContext contoller_pages() {
			return getRuleContext(Contoller_pagesContext.class,0);
		}
		public TerminalNode COLSE_CURLY_BRACKET_CONTROL() { return getToken(HTMLParser.COLSE_CURLY_BRACKET_CONTROL, 0); }
		public PhpPagesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_phpPages; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterPhpPages(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitPhpPages(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitPhpPages(this,null);
			else return visitor.visitChildren(this);
		}
	}

	public final PhpPagesContext phpPages() throws RecognitionException {
		PhpPagesContext _localctx = new PhpPagesContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_phpPages);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(73);
			match(PHP_PAGE);
			setState(74);
			match(CONTOLLER_PAGE_NAME);
			setState(75);
			match(CONTROL);
			setState(76);
			match(CONTOLLER_PAGE_NAME);
			setState(77);
			match(OPEN_CURLY_BRACKET_CONTROL);
			setState(78);
			contoller_pages();
			setState(79);
			match(COLSE_CURLY_BRACKET_CONTROL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Contoller_pagesContext extends ParserRuleContext {
		public List<Controller_elementContext> controller_element() {
			return getRuleContexts(Controller_elementContext.class);
		}
		public Controller_elementContext controller_element(int i) {
			return getRuleContext(Controller_elementContext.class,i);
		}
		public Contoller_pagesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contoller_pages; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).enterContoller_pages(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HTMLParserListener ) ((HTMLParserListener)listener).exitContoller_pages(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HTMLParserVisitor ) return ((HTMLParserVisitor<? extends T>)visitor).visitContoller_pages(this,null);
			else return visitor.visitChildren(this);
		}
	}

	public final Contoller_pagesContext contoller_pages() throws RecognitionException {
		Contoller_pagesContext _localctx = new Contoller_pagesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_contoller_pages);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(81);
				controller_element();
				}
				}
				setState(84); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 122)) & ~0x3f) == 0 && ((1L << (_la - 122)) & ((1L << (SERVER_NAME - 122)) | (1L << (USER_NAME - 122)) | (1L << (PASSWORD - 122)) | (1L << (DB_NAME - 122)) | (1L << (INSERT_TO - 122)) | (1L << (SELECT_OF - 122)) | (1L << (VALID_IN - 122)) | (1L << (GO - 122)) | (1L << (IF - 122)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
